--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,3 +1,13 @@
+author: Chlikikijleelgus
 name: Firebug
 main: me.chlikikijleelgus.firebug.Firebug
 version: 1.2
+
+permissions:
+    firebug.*:
+        description: Gives access to all firebug nodes
+        children:
+            firebug.canusefire: true
+    firebug.canusefire:
+        description: Allows safe Flint and Steel use.
+        default: op
